# Media-To-Sheets

./: .gitignore  README.md  environment.yml  media_to_sheets.py  requirements.txt  setup.cfg  setup.py
mtslib/: __init__.py  clear_console.py  constants.py  download_functions.py  get_sheets.py  google_sheets.py  update_gs_range.py
