[metadata]
name = mtslib
author = John Ingles
author-email= john.kenneth.ingles@gmail.com
summary = Download Various Media types to Google Sheets and Connect to React App
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = x
project_urls =
    Bug Tracker = https://github.com/kungfoomanchu/inventory_api/issues
    Source Code = https://github.com/kungfoomanchu/inventory_api
license = MIT

[files]
packages = mtslib

[entry_points]
console_scripts =
    Media_to_Sheets = mtslib:main